syntax = "proto3";

package ai.metathings.service.sensord;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

import "github.com/nayotta/metathings/pkg/proto/sensor/sensor.proto";

message Sensor {
	string id = 1;
	string name = 2;
	string application_credential_id = 3;
	string core_id = 4;
	string entity_name = 5;
	string owner_id = 6;
	repeated string tags = 7;
	ai.metathings.service.sensor.SensorState state = 8;
	map<string, ai.metathings.service.sensor.SensorValue> config = 9;

}

message SensorData {
	string sensor_id = 1;
	google.protobuf.Timestamp created_at = 2;
	google.protobuf.Timestamp arrived_at = 3;
	map<string, ai.metathings.service.sensor.SensorValue> data = 4;
}
